Add attachment support & revamp doc6 scoring
Introduce AcademicAttachment entity and repository, and add attachment CRUD flows: upload (with type/size checks, unique stored names, 10-file limit), download and delete endpoints in the admin controller, service methods, and UI listing in request_detail. Revamp document-6 scoring to use one section score (sec_score_X) instead of 5 per-item inputs: updated backend calculations, score-range mapping, weighted formulas, and corresponding frontend inputs/JS to auto-calculate ranges and totals; prefill doc7/doc8 from doc6 and set eval_result_level for downstream documents. Misc fixes: replace getFirst() with get(0) usages, XWPFRun indexing fix, update application.properties (DB URL and Hibernate dialect), add a sample uploaded doc and update generated resources/classes. UI/UX improvements include error/success messages for attachment actions and preserving existing form data on load.