@@ -93,6 +93,8 @@ public class AcademicAdminController {
         model.addAttribute("statuses", RequestStatus.values());
         model.addAttribute("statusHistory", requestService.getStatusHistory(id));
         model.addAttribute("docLabels", DOC_LABELS);
+        model.addAttribute("attachments", requestService.getAttachments(id));
+        model.addAttribute("attachmentCount", requestService.countAttachments(id));
         return "academic/admin/request_detail";
     }
 
@@ -141,7 +143,7 @@ public class AcademicAdminController {
 
         // Load existing JSON data if available
         if (!existingDocs.isEmpty()) {
-            model.addAttribute("existingData", existingDocs.getFirst().getJsonData());
+            model.addAttribute("existingData", existingDocs.get(0).getJsonData());
         }
 
         // ดึงรายชื่อกรรมการ 3 คนจาก doc_2 เพื่อ auto-fill ในเอกสารถัดไป
@@ -149,7 +151,7 @@ public class AcademicAdminController {
             List<AcademicDocument> doc2List = requestService.getDocumentsByType(id, 2);
             if (!doc2List.isEmpty()) {
                 try {
-                    String doc2Json = doc2List.getFirst().getJsonData();
+                    String doc2Json = doc2List.get(0).getJsonData();
                     Map<String, Object> doc2Data = objectMapper.readValue(doc2Json,
                             new com.fasterxml.jackson.core.type.TypeReference<Map<String, Object>>() {});
                     String c1 = doc2Data.getOrDefault("n_1", "").toString();
@@ -164,12 +166,27 @@ public class AcademicAdminController {
             }
         }
 
+        // สำหรับ doc_7 หรือ doc_8: ดึงผลจาก doc_6 มา auto-fill (default)
+        if (type == 7 || type == 8) {
+            List<AcademicDocument> doc6List = requestService.getDocumentsByType(id, 6);
+            if (!doc6List.isEmpty()) {
+                try {
+                    String doc6Json = doc6List.get(0).getJsonData();
+                    Map<String, Object> doc6Data = objectMapper.readValue(doc6Json,
+                            new com.fasterxml.jackson.core.type.TypeReference<Map<String, Object>>() {});
+                    model.addAttribute("doc6Data", doc6Data);
+                } catch (Exception e) {
+                    // ignore
+                }
+            }
+        }
+
         // สำหรับ doc_1 (admin): ดึงข้อมูลที่ผู้ยื่นกรอกมาแสดง
         if (type == 1) {
             List<AcademicDocument> doc1List = requestService.getDocumentsByType(id, 1);
             if (!doc1List.isEmpty()) {
                 try {
-                    String doc1Json = doc1List.getFirst().getJsonData();
+                    String doc1Json = doc1List.get(0).getJsonData();
                     Map<String, String> doc1Data = objectMapper.readValue(doc1Json,
                             new com.fasterxml.jackson.core.type.TypeReference<Map<String, String>>() {});
                     model.addAttribute("doc1Data", doc1Data);
@@ -197,18 +214,32 @@ public class AcademicAdminController {
             double grandTotal = 0;
 
             for (int sec = 1; sec <= 4; sec++) {
-                double sum = 0;
-                for (int item = 1; item <= 5; item++) {
-                    String key = "re" + sec + item;
-                    String val = formData.getOrDefault(key, "0");
-                    try {
-                        sum += Double.parseDouble(val);
-                    } catch (NumberFormatException e) {
-                        sum += 0;
-                    }
+                // Admin กรอกคะแนนรวมต่อส่วน (1 ค่าต่อส่วน) ในช่อง sec_score_X
+                String secScoreVal = formData.getOrDefault("sec_score_" + sec, "0");
+                double secScore = 0;
+                try {
+                    secScore = Double.parseDouble(secScoreVal);
+                } catch (NumberFormatException e) {
+                    secScore = 0;
                 }
-                // สูตร: (ผลรวมคะแนน / 25) × ค่าน้ำหนัก
-                double weighted = (sum / 25.0) * weights[sec - 1];
+
+                // วิเคราะห์ว่าคะแนนตกอยู่ในช่วงไหน (5 ช่วง)
+                // ช่วง: 0-1 = score_1, 1.01-2 = score_2, 2.01-3 = score_3, 3.01-4 = score_4, 4.01-5 = score_5
+                // placeholder ใน template DOCX: {{score11}}, {{score12}}, ..., {{score45}}
+                for (int range = 1; range <= 5; range++) {
+                    String key = "score" + sec + range;
+                    boolean inRange = false;
+                    if (range == 1) inRange = (secScore > 0 && secScore <= 1);
+                    else if (range == 2) inRange = (secScore > 1 && secScore <= 2);
+                    else if (range == 3) inRange = (secScore > 2 && secScore <= 3);
+                    else if (range == 4) inRange = (secScore > 3 && secScore <= 4);
+                    else if (range == 5) inRange = (secScore > 4 && secScore <= 5);
+                    // ช่วงที่ตรง → ใส่คะแนน, ช่วงอื่น → ว่าง
+                    formData.put(key, inRange ? String.valueOf(secScore) : "");
+                }
+
+                // สูตร: (คะแนน / 5) × ค่าน้ำหนัก
+                double weighted = (secScore / 5.0) * weights[sec - 1];
                 formData.put("score" + sec + "x", "%.2f".formatted(weighted));
                 grandTotal += weighted;
             }
@@ -222,6 +253,14 @@ public class AcademicAdminController {
             formData.put("ch2", (roundedTotal >= 57 && roundedTotal <= 70) ? "☑" : "☐");
             formData.put("ch3", (roundedTotal >= 71 && roundedTotal <= 85) ? "☑" : "☐");
             formData.put("ch4", roundedTotal >= 86 ? "☑" : "☐");
+
+            // กำหนด eval_level จากผลคะแนนเพื่อส่งต่อไป doc7/doc8
+            String evalLevel = "";
+            if (roundedTotal < 56) evalLevel = "ไม่ผ่าน";
+            else if (roundedTotal <= 70) evalLevel = "ชำนาญ";
+            else if (roundedTotal <= 85) evalLevel = "ชำนาญพิเศษ";
+            else evalLevel = "เชี่ยวชาญ";
+            formData.put("eval_result_level", evalLevel);
         }
 
         String jsonData = objectMapper.writeValueAsString(formData);
@@ -310,14 +349,100 @@ public class AcademicAdminController {
 
     @PostMapping("/request/{id}/upload-result")
     public String uploadResult(@PathVariable Long id,
-            @RequestParam("file") MultipartFile file) throws IOException {
-        String uploadDir = "uploads/academic/" + id + "/";
+            @RequestParam("file") MultipartFile file,
+            Principal principal) throws IOException {
+
+        // ตรวจสอบจำนวนไฟล์ไม่เกิน 10
+        long currentCount = requestService.countAttachments(id);
+        if (currentCount >= 10) {
+            return "redirect:/admin/academic/request/" + id + "?error=max_attachments";
+        }
+
+        AcademicRequest request = requestService.findById(id)
+                .orElseThrow(() -> new RuntimeException("Request not found"));
+
+        // ตรวจสอบประเภทไฟล์
+        String originalFilename = file.getOriginalFilename();
+        if (originalFilename == null ||
+                (!originalFilename.toLowerCase().endsWith(".pdf") && !originalFilename.toLowerCase().endsWith(".docx"))) {
+            return "redirect:/admin/academic/request/" + id + "?error=invalid_file_type";
+        }
+
+        String uploadDir = "uploads/academic/" + id + "/attachments/";
         Files.createDirectories(Path.of(uploadDir));
-        String filePath = uploadDir + "result_" + file.getOriginalFilename();
+
+        // สร้างชื่อไฟล์ไม่ซ้ำ
+        String storedFilename = System.currentTimeMillis() + "_" + originalFilename;
+        String filePath = uploadDir + storedFilename;
         file.transferTo(Path.of(filePath));
 
-        requestService.setResultFile(id, filePath);
-        return "redirect:/admin/academic/request/" + id + "?success=result_uploaded";
+        // บันทึกข้อมูลลง DB
+        com.ecom.academic.model.AcademicAttachment attachment = new com.ecom.academic.model.AcademicAttachment();
+        attachment.setRequest(request);
+        attachment.setOriginalFilename(originalFilename);
+        attachment.setStoredFilePath(filePath);
+        attachment.setFileType(originalFilename.toLowerCase().endsWith(".pdf") ? "PDF" : "DOCX");
+        attachment.setFileSize(file.getSize());
+        requestService.saveAttachment(attachment);
+
+        // Log activity
+        UserDtls admin = getUser(principal);
+        adminLogService.log(principal.getName(),
+                admin != null ? admin.getName() : principal.getName(),
+                "UPLOAD_ATTACHMENT",
+                "อัปโหลดเอกสารเพิ่มเติม \"" + originalFilename + "\" สำหรับคำร้อง #" + id,
+                getClientIpAddress());
+
+        return "redirect:/admin/academic/request/" + id + "?success=attachment_uploaded";
+    }
+
+    @GetMapping("/request/{id}/attachment/{attachmentId}/download")
+    public ResponseEntity<ByteArrayResource> downloadAttachment(@PathVariable Long id,
+            @PathVariable Long attachmentId) throws IOException {
+        com.ecom.academic.model.AcademicAttachment attachment = requestService.findAttachmentById(attachmentId)
+                .orElseThrow(() -> new RuntimeException("Attachment not found"));
+
+        byte[] data = Files.readAllBytes(Path.of(attachment.getStoredFilePath()));
+        ByteArrayResource resource = new ByteArrayResource(data);
+
+        String contentType = attachment.getFileType().equalsIgnoreCase("PDF")
+                ? "application/pdf"
+                : "application/vnd.openxmlformats-officedocument.wordprocessingml.document";
+
+        return ResponseEntity.ok()
+                .header(HttpHeaders.CONTENT_DISPOSITION,
+                        "attachment; filename=\"" + attachment.getOriginalFilename() + "\"")
+                .contentType(MediaType.parseMediaType(contentType))
+                .contentLength(data.length)
+                .body(resource);
+    }
+
+    @PostMapping("/request/{id}/attachment/{attachmentId}/delete")
+    public String deleteAttachment(@PathVariable Long id,
+            @PathVariable Long attachmentId,
+            Principal principal) {
+        com.ecom.academic.model.AcademicAttachment attachment = requestService.findAttachmentById(attachmentId)
+                .orElse(null);
+
+        if (attachment != null) {
+            // ลบไฟล์จริง
+            try {
+                Files.deleteIfExists(Path.of(attachment.getStoredFilePath()));
+            } catch (IOException e) {
+                // ignore
+            }
+            requestService.deleteAttachment(attachmentId);
+
+            // Log activity
+            UserDtls admin = getUser(principal);
+            adminLogService.log(principal.getName(),
+                    admin != null ? admin.getName() : principal.getName(),
+                    "DELETE_ATTACHMENT",
+                    "ลบเอกสารเพิ่มเติม \"" + attachment.getOriginalFilename() + "\" จากคำร้อง #" + id,
+                    getClientIpAddress());
+        }
+
+        return "redirect:/admin/academic/request/" + id + "?success=attachment_deleted";
     }
 
     private UserDtls getUser(Principal principal) {
